Change http to https

--- a/package.json
+++ b/package.json
@@ -33,5 +33,5 @@
     "typescript": "^5.2.2",
     "vite": "^5.2.13"
   },
-  "homepage": "http://abraekev.github.io/seventeen_bit"
+  "homepage": "https://abraekev.github.io/seventeen_bit"
 }
